:bricks: build: cypress setup

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 API_TOKEN=YWRtaW5fZWJhYzpAYWRtaW4hJmJAYyEyMDIy
-API_URL="https://lojaebac.ebaconline.art.br/wp-json/wc/v3"
+API_URL="http:localhost:81"
+FRONTEND_URL="http:localhost:80"
