--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "description": "Projeto QA envolvendo teste automatizado de UI, mobile e API.",
   "main": "index.js",
   "scripts": {
-    "api-test": "mocha 'API/tests/**/*.spec.mjs'",
-    "format": "prettier write ."
+    "test-api": "mocha 'API/tests/**/*.spec.mjs'",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "format": "prettier --write '**/*.{js,json,css,mjs}'"
   },
   "keywords": [],
   "author": "bruno-moleta-santos",
   "license": "ISC",
   "dependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "^20.1.0",
+    "@cypress/webpack-preprocessor": "^6.0.2",
     "@faker-js/faker": "^8.4.1",
     "chai": "^5.1.1",
     "chai-things": "^0.2.0",
+    "cypress": "^13.13.1",
     "dotenv": "^16.4.5",
     "mocha": "^10.6.0",
     "prettier": "^3.3.3",
