--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test-api": "mocha 'API/tests/**/*.spec.mjs'",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "format": "prettier --write '**/*.{js,json,css,mjs}'"
+    "format": "prettier --write '**/*.{js,json,mjs}'",
+    "report": "mergeJsonReport && pnpm generateReport",
+    "mergeJsonReport": "npx mochawesome-merge ./UI/mochawesome-report/*.json -o ./UI/mochawesome-report/result.json",
+    "generateReport": "npx marge ./UI/mochawesome-report/result.json -o ./UI/mochawesome-report"
   },
   "keywords": [],
   "author": "bruno-moleta-santos",
@@ -22,6 +25,8 @@
     "cypress": "^13.13.1",
     "dotenv": "^16.4.5",
     "mocha": "^10.6.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
     "prettier": "^3.3.3",
     "supertest": "^7.0.0"
   }
