:card_file_box: raw: update env vars

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 API_TOKEN=YWRtaW5fZWJhYzpAYWRtaW4hJmJAYyEyMDIy
-API_URL="http:localhost:81"
+API_URL="http://lojaebac.ebaconline.art.br/wp-json/wc/v3"
 FRONTEND_URL="http:localhost:80"
+NODE_ENV=development
