--- a/grafana-dashboard.yaml
+++ b/grafana-dashboard.yaml
@@ -1,9 +1,9 @@
 apiVersion: 1
-
-datasources:
-  - name: k6influxdb
-    type: influxdb
-    access: proxy
-    database: k6
-    url: http://influxdb:8086
-    isDefault: true
+providers:
+  - name: 'default'
+    org_id: 1
+    folder: ''
+    type: 'file'
+    editable: true
+    options:
+      path: /var/lib/grafana/dashboards
