--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "main": "index.js",
   "scripts": {
     "test-api": "mocha 'API/tests/**/*.spec.mjs' --reporter mochawesome --reporter-options reportDir=./API/apiReporter",
+    "test-mobile": "wdio run Mobile/config/wdio.conf.js",
     "test-performance": "k6 run performance/tests/login.test.js",
     "cy:open": "cypress open",
-    "cy:run": "cypress run",
-    "format": "prettier --write '**/*.{js,json,mjs}'",
-    "report": "mergeJsonReport && pnpm generateReport",
+    "cy:run": "pnpm cy:edge",
+    "cy:edge": "cypress run --headless --browser edge",
+    "format": "prettier --write '**/*.{js,json,mjs,ts,md}'",
+    "postman:report": "newman run API/Postman/loja-ebac.postman_collection.json -r htmlextra --reporter-htmlextra-export API/Postman/newman-reporter",
+    "ui:report": "pnpm mergeJsonReport && pnpm generateReport",
     "mergeJsonReport": "npx mochawesome-merge ./UI/mochawesome-report/*.json -o ./UI/mochawesome-report/result.json",
-    "generateReport": "npx marge ./UI/mochawesome-report/result.json -o ./UI/mochawesome-report"
+    "generateReport": "npx marge ./UI/mochawesome-report/result.json -o ./",
+    "allure": "npx allure serve"
   },
   "keywords": [],
   "author": "bruno-moleta-santos",
@@ -21,19 +25,31 @@
     "@badeball/cypress-cucumber-preprocessor": "^20.1.0",
     "@cypress/webpack-preprocessor": "^6.0.2",
     "@faker-js/faker": "^8.4.1",
+    "@wdio/globals": "^8.39.1",
     "allure-commandline": "^2.29.0",
     "allure-mocha": "3.0.0-beta.7",
     "chai": "^5.1.1",
     "chai-things": "^0.2.0",
     "cypress": "^13.13.1",
     "dotenv": "^16.4.5",
+    "k6": "^0.0.0",
     "mocha": "^10.6.0",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
+    "newman": "^6.1.3",
+    "newman-reporter-htmlextra": "^1.23.1",
     "prettier": "^3.3.3",
     "supertest": "^7.0.0"
   },
   "dependencies": {
-    "k6": "^0.0.0"
+    "@wdio/allure-reporter": "^8.39.0",
+    "@wdio/appium-service": "^8.39.1",
+    "@wdio/cli": "^8.39.1",
+    "@wdio/local-runner": "^8.39.1",
+    "@wdio/mocha-framework": "^8.39.0",
+    "@wdio/spec-reporter": "^8.39.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
