--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,11 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Run Cypress UI test suite
         uses: cypress-io/github-action@v6
@@ -27,10 +30,13 @@ jobs:
         with:
           browser: chrome
           headless: true
-          run: npm run cy:run
+          run: pnpm run cy:run
 
       - name: Run Supertest API test suite
-        run: npm run test-api
+        run: pnpm run test-api
+
+      - name: Run Webdriver IO Android device test suite
+        run: pnpm run test-mobile
 
       - name: Publish report
         run: mv ./mochawesome-report/* ./reports
