:package: chore: Refactor and reorganize test scripts
Reorganized test scripts for better consistency and readability. Added reporting steps for mobile and UI tests. Adjusted script naming to follow a consistent `test:*` pattern for testing commands.

--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "description": "Projeto QA envolvendo teste automatizado de UI, mobile e API.",
   "main": "index.js",
   "scripts": {
-    "test-api": "mocha 'API/tests/**/*.spec.mjs' --reporter mochawesome --reporter-options reportDir=./API/apiReporter",
-    "test-mobile": "wdio run Mobile/config/wdio.conf.js",
-    "test-performance": "k6 run performance/tests/login.test.js",
+    "test:mobile": "wdio run ./Mobile/config/wdio.conf.js & pnpm mobile:report",
+    "mobile:report": "allure generate ./Mobile/reports/allure-results && allure open",
+    "test:performance": "k6 run performance/test/login.test.js",
     "cy:open": "cypress open",
-    "cy:run": "pnpm cy:edge",
+    "cy:run": "pnpm cy:edge & pnpm ui:report",
     "cy:edge": "cypress run --headless --browser edge",
-    "format": "prettier --write '**/*.{js,json,mjs,ts,md}'",
-    "postman:report": "newman run API/Postman/loja-ebac.postman_collection.json -r htmlextra --reporter-htmlextra-export API/Postman/newman-reporter",
+    "test:api": "mocha './API/tests/**/*.spec.mjs' --reporter mochawesome --reporter-options reportDir=./API/apiReporter",
+    "postman:report": "newman run ./API/Postman/loja-ebac.postman_collection.json -r htmlextra --reporter-htmlextra-export API/Postman/newman-reporter",
     "ui:report": "pnpm mergeJsonReport && pnpm generateReport",
     "mergeJsonReport": "npx mochawesome-merge ./UI/mochawesome-report/*.json -o ./UI/mochawesome-report/result.json",
     "generateReport": "npx marge ./UI/mochawesome-report/result.json -o ./",
-    "allure": "npx allure serve"
+    "format": "prettier --write '**/*.{js,json,mjs,ts,md}'"
   },
   "keywords": [],
   "author": "bruno-moleta-santos",
